--- a/toelichting.html
+++ b/toelichting.html
@@ -10,11 +10,11 @@
 			
 			<figure id="Grondwatermonitoringput_twee_monitoringbuizen">
 				<img src="./media/Fig01_grondwatermonitoringput_twee_monitoringbuizen.png" alt="Grondwatermonitoringput_twee_monitoringbuizen" height="500"/>
-				<figcaption>Figuur 1: Schematische weergave van een grondwatermonitoringput met twee monitoringbuizen; de verticaal gearceerde delen zijn de filters.</figcaption>
+				<figcaption>Schematische weergave van een grondwatermonitoringput met twee monitoringbuizen; de verticaal gearceerde delen zijn de filters.</figcaption>
 			</figure>
 			 
 			<p>De opbouw van een put varieert en de monitoringdiepte is daarbij een factor van belang. Wordt de put gebruikt voor de monitoring van het grondwater in het bovenste deel van de ondergrond, dan bestaat hij vaak uit niet meer dan een buis die aan de bovenzijde met een dop is afgesloten.
-			Voor het ontsluiten van diep grondwater worden soms honderden meters diepe gaten geboord en dat is een relatief kostbare operatie. Dergelijke putten kunnen tientallen monitoringbuizen bevatten. Elk van die buizen ontsluit grondwater op een andere diepte. De ruimte tussen de buizen is met een bepaald materiaal opgevuld om het geheel te verstevigen en aan de bovenzijde wordt de put afgesloten met een beschermconstructie. Zoals de naam al aangeeft dient de beschermconstructie om de put te beschermen tegen beschadiging of andere ongewenste invloeden. De constructie is kan boven het maaiveld uitsteken, zoals in figuur 1, maar ook min of meer samenvallen met het maaiveld. Voor het laatste wordt in de gebouwde omgeving vaak gekozen.</p>
+			Voor het ontsluiten van diep grondwater worden soms honderden meters diepe gaten geboord en dat is een relatief kostbare operatie. Dergelijke putten kunnen tientallen monitoringbuizen bevatten. Elk van die buizen ontsluit grondwater op een andere diepte. De ruimte tussen de buizen is met een bepaald materiaal opgevuld om het geheel te verstevigen en aan de bovenzijde wordt de put afgesloten met een beschermconstructie. Zoals de naam al aangeeft dient de beschermconstructie om de put te beschermen tegen beschadiging of andere ongewenste invloeden. De constructie is kan boven het maaiveld uitsteken, zoals in figuur 2, maar ook min of meer samenvallen met het maaiveld. Voor het laatste wordt in de gebouwde omgeving vaak gekozen.</p>
 			<p>Een grondwatermonitoringput is in de basisregistratie ondergrond opgenomen wanneer ten minste een van de filters of elektroden een meetpunt is in een grondwatermonitoringnet dat onder de basisregistratie ondergrond valt.</p>
 		</section>
 
@@ -42,20 +42,20 @@
 
 		<section id="Monitoringbuis">
 			<h4>Monitoringbuis</h4>
-			<p>De constructie van een put is in de basisregistratie ondergrond teruggebracht tot haar essentie, en dat geldt ook voor de monitoringbuis. In werkelijkheid kan een buis bestaan uit een heleboel delen die wat materiaal, diameter en functie betreft verschillen. Het model dat de basisregistratie hanteert is simpel en beschrijft de buis als opgebouwd uit maximaal drie functionele delen (figuur 2).</p>
+			<p>De constructie van een put is in de basisregistratie ondergrond teruggebracht tot haar essentie, en dat geldt ook voor de monitoringbuis. In werkelijkheid kan een buis bestaan uit een heleboel delen die wat materiaal, diameter en functie betreft verschillen. Het model dat de basisregistratie hanteert is simpel en beschrijft de buis als opgebouwd uit maximaal drie functionele delen (figuur 3).</p>
 
 			<figure id="Put met buis zoals in veld en zoals in BRO">
 				<img src="./media/Fig02_put_met_buis_in_veld_en_in_BRO.png" alt="Put met buis zoals in veld en zoals in BRO" height="500"/>
-				<figcaption>Figuur 2: Voorbeeld van een put met één buis in het veld (links) en hoe die in de BRO (rechts) wordt vastgelegd.</figcaption>
+				<figcaption>Voorbeeld van een put met één buis in het veld (links) en hoe die in de BRO (rechts) wordt vastgelegd.</figcaption>
 			</figure>
 
 			<p>In de meeste gevallen bestaat een buis uit een filter met daarboven een stijgbuisdeel; in sommige gevallen zit onder het filter nog een derde deel, de zandvang. Ieder deel van de buis heeft een bepaalde lengte.</p>
-			<p>Het filter is het belangrijkste onderdeel van de buis en fungeert als meetpunt in een grondwatermonitoringnet. Via het filter kan het grondwater de buis in stromen. In het stijgbuisdeel kan het grondwater vrijelijk bewegen tenzij de buis is afgesloten met een drukdop (figuur 3). Een drukdop wordt gebruikt wanneer de buis zou kunnen overstromen doordat het water onder druk staat. Wanneer de grondwaterstand bepaald moet worden, wordt in die gevallen vaak een opzetstuk gebruikt.</p>
+			<p>Het filter is het belangrijkste onderdeel van de buis en fungeert als meetpunt in een grondwatermonitoringnet. Via het filter kan het grondwater de buis in stromen. In het stijgbuisdeel kan het grondwater vrijelijk bewegen tenzij de buis is afgesloten met een drukdop (figuur 4). Een drukdop wordt gebruikt wanneer de buis zou kunnen overstromen doordat het water onder druk staat. Wanneer de grondwaterstand bepaald moet worden, wordt in die gevallen vaak een opzetstuk gebruikt.</p>
 			<p>De zandvang dient om sediment op te vangen dat door het filter naar binnen komt.</p>
 
 			<figure id="Monitoringbuis met drukdop en opzetstuk">
 				<img src="./media/Fig03_monitoringbuis_drukdop_opzetstuk.png" alt="Monitoringbuis met drukdop en opzetstuk" height="500"/>
-				<figcaption>Figuur 3: Monitoringbuis voorzien van een drukdop (links), en gebruik van een opzetstuk voor het uitvoeren van een grondwaterstandmeting (rechts).</figcaption>
+				<figcaption>Monitoringbuis voorzien van een drukdop (links), en gebruik van een opzetstuk voor het uitvoeren van een grondwaterstandmeting (rechts).</figcaption>
 			</figure>
 
 			<p>Voor de monitoring van ondiep grondwater zijn buizen met een afwijkende opbouw in gebruik, en in gebruik geweest.</p>
@@ -75,7 +75,7 @@
 
 			<figure id="Inplaatsen van een stijgbuisdeel">
 				<img src="./media/Fig04_inplaatsen_stijgbuisdeel.png" alt="Inplaatsen van een stijgbuisdeel" height="500"/>
-				<figcaption>Figuur 4: Inplaatsen van een stijgbuisdeel.</figcaption>
+				<figcaption>Inplaatsen van een stijgbuisdeel.</figcaption>
 			</figure>
 
 		</section>
@@ -86,33 +86,33 @@
 			<ul>
 				<li>Het eigendom van de put is op een andere organisatie overgegaan.</li>
 				<li>Het uitvoeren van het onderhoud van de put is op een andere organisatie overgegaan.</li>
-				<li>In een bestaande monitoringbuis is een nieuw stijgbuisdeel geplaatst (figuur 4).</li>
+				<li>In een bestaande monitoringbuis is een nieuw stijgbuisdeel geplaatst (figuur 5).</li>
 				<li>De put wordt voorzien van een beschermconstructie of de bestaande beschermconstructie wordt vervangen door een ander type.</li>
 				<li>De toestand die aangeeft of de monitoringbuis gebruikt kan worden voor monitoring, is veranderd.</li>
 				<li>De toestand die aangeeft of de elektrode gebruikt kan worden voor monitoring, is veranderd.</li>
-				<li>Een monitoringbuis is korter gemaakt (figuur 5); deze verandering kan gepaard gaan met het aanbrengen of vervangen van een beschermconstructie.</li>
-				<li>Een monitoringbuis is langer gemaakt (figuur 5); deze verandering kan gepaard gaan met het aanbrengen of vervangen van een beschermconstructie.
+				<li>Een monitoringbuis is korter gemaakt (figuur 6); deze verandering kan gepaard gaan met het aanbrengen of vervangen van een beschermconstructie.</li>
+				<li>Een monitoringbuis is langer gemaakt (figuur 6); deze verandering kan gepaard gaan met het aanbrengen of vervangen van een beschermconstructie.
 					<figure id="Oplengen en inkorten van monitoringbuis">
 						<img src="./media/Fig05_oplengen_inkorten.png" alt="Oplengen en inkorten van monitoringbuis" height="500"/>
-						<figcaption>Figuur 5: Het oplengen (links) en inkorten (rechts) van een monitoringbuis.</figcaption>
+						<figcaption>Het oplengen (links) en inkorten (rechts) van een monitoringbuis.</figcaption>
 					</figure>
 				</li>
-				<li>De positie van het maaiveld is opnieuw bepaald omdat de mens ter plekke heeft ingegrepen (figuur 6), bijvoorbeeld door het bovenste deel van de bodem weg te graven.
+				<li>De positie van het maaiveld is opnieuw bepaald omdat de mens ter plekke heeft ingegrepen (figuur 7), bijvoorbeeld door het bovenste deel van de bodem weg te graven.
 					<figure id="Verandering van maaiveldpositie">
 						<img src="./media/Fig06_verandering_maaiveldpositie_ingrijpen_mens.png" alt="Verandering van maaiveldpositie" height="500"/>
-						<figcaption>Figuur 6: Verandering van maaiveldpositie door direct ingrijpen van de mens.</figcaption>
+						<figcaption>Verandering van maaiveldpositie door direct ingrijpen van de mens.</figcaption>
 					</figure>
 				</li>
-				<li>De positie van het maaiveld is opnieuw bepaald, omdat de put in een gebied ligt waar de positie van het maaiveld aan verandering onderhevig is; het is echter niet nodig de posities van de buizen opnieuw te bepalen omdat de put is verankerd (figuur 7).
+				<li>De positie van het maaiveld is opnieuw bepaald, omdat de put in een gebied ligt waar de positie van het maaiveld aan verandering onderhevig is; het is echter niet nodig de posities van de buizen opnieuw te bepalen omdat de put is verankerd (figuur 8).
 					<figure id="Maaiveld daalt put stabiel">
 						<img src="./media/Fig07_maaiveld_daalt_put_stabiel.png" alt="Maaiveld daalt put stabiel" height="500"/>
-						<figcaption>Figuur 7: Het maaiveld in het gebied daalt, maar de positie van de put t.o.v. NAP verandert niet.</figcaption>
+						<figcaption>Het maaiveld in het gebied daalt, maar de positie van de put t.o.v. NAP verandert niet.</figcaption>
 					</figure>
 				</li>
-				<li>De posities van het maaiveld en de posities van de buizen zijn opnieuw bepaald, omdat de put in een gebied ligt waar de positie van het maaiveld veranderlijk is en de put meebeweegt (figuur 8).
+				<li>De posities van het maaiveld en de posities van de buizen zijn opnieuw bepaald, omdat de put in een gebied ligt waar de positie van het maaiveld veranderlijk is en de put meebeweegt (figuur 9).
 					<figure id="Maaiveld daalt put daalt">
 						<img src="./media/Fig08_maaiveld_daalt_put_daalt.png" alt="Maaiveld daalt put daalt" height="500"/>
-						<figcaption>Figuur 8: Het maaiveld in het gebied daalt en de positie van de put t.o.v. NAP daalt mee.</figcaption>
+						<figcaption>Het maaiveld in het gebied daalt en de positie van de put t.o.v. NAP daalt mee.</figcaption>
 					</figure>
 				</li>
 			</ul>
