Attempt to fix data-include not being loaded...

--- a/index.html
+++ b/index.html
@@ -47,9 +47,11 @@
 	<section id="Grondwatermonitoringput">
 		<h2>Grondwatermonitoringput</h2>
 		<!-- sectie Grondwatermonitoring en sectie Domein grondwatermonitoring in de BRO-->
-		<section data-include='https://github.com/BROprogramma/generiek/raw/gh-pages/gm/data/GM_domein.html'></section>
-		<!-- Note; Instead of the above 'main URL', the following 'redirect URL' can probably also be used (the above URL seems to redirect to this alternative URL); 'https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/gm/data/GM_domein.html'.
-		I used the 'main URL' because for a PNG image within this data-include page, the 'redirect URL' didn't seem to work. -->
+		<section data-include='https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/gm/data/GM_domein.html'></section>
+		<!-- https://github.com/BROprogramma/generiek/raw/gh-pages/gm/data/GM_domein.html -->
+		<!-- Note; Instead of the 'main URL' (https://github.com/BROprogramma/generiek/raw/gh-pages/gm/data/GM_domein.html), the above 'redirect URL' is used (the main URL seems to redirect to this alternative URL).
+		Initially used the 'main URL' because for a PNG image within this data-include page, the 'redirect URL' didn't seem to work.
+		However, in for this html document it seems that only the 'redirect URL' works and not the 'main URL'. Weird... -->
 		<!-- (expected) link to location on docs.geostandaarden; 'https://docs.geostandaarden.nl/bro/gen/gm/data/GM_domein.html'. -->
 		
 		<!-- sectie De Grondwatermonitoringput en sectie Belangrijkste entiteiten -->
