--- a/index.html
+++ b/index.html
@@ -47,12 +47,64 @@
 	<section id="Grondwatermonitoringput">
 		<h2>Grondwatermonitoringput</h2>
 		<!-- sectie Grondwatermonitoring en sectie Domein grondwatermonitoring in de BRO-->
-		<section data-include='https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/gm/data/GM_domein.html'></section>
+		<!-- <section data-include='https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/gm/data/GM_domein.html'></section> -->
 		<!-- https://github.com/BROprogramma/generiek/raw/gh-pages/gm/data/GM_domein.html -->
 		<!-- Note; Instead of the 'main URL' (https://github.com/BROprogramma/generiek/raw/gh-pages/gm/data/GM_domein.html), the above 'redirect URL' is used (the main URL seems to redirect to this alternative URL).
 		Initially used the 'main URL' because for a PNG image within this data-include page, the 'redirect URL' didn't seem to work.
 		However, in for this html document it seems that only the 'redirect URL' works and not the 'main URL'. Weird... -->
 		<!-- (expected) link to location on docs.geostandaarden; 'https://docs.geostandaarden.nl/bro/gen/gm/data/GM_domein.html'. -->
+		<section id="grondwatermonitoring" class='generic informative'>
+			<h3>Grondwatermonitoring</h3>
+			<p>Grondwater is een belangrijke bestaansbron. Het grondwater wordt daarom in Nederland op grote schaal gemonitord en beheerd. Het beheer van het grondwater richt zich op de hoeveelheid grondwater en de kwaliteit ervan. Om dit beheer goed te kunnen uitvoeren, wordt in Nederland de toestand van het grondwater over langere tijd gevolgd. Dat heet grondwatermonitoring. Er wordt daarbij gekeken naar de grondwaterstand (kwantiteit), en naar de samenstelling van het grondwater (kwaliteit).</p>
+			<p>In het domein grondwatermonitoring staan de grondwatermonitoringnetten centraal. Deze zijn ingericht om het grondwater in Nederland te kunnen beheren. Het doel waarvoor een monitoringnet is ingesteld, het monitoringdoel, beperkt zich in veel gevallen tot kwantiteit of kwaliteit, maar het komt ook voor dat onderzoek aan zowel de kwantiteit als de kwaliteit wordt gedaan binnen hetzelfde grondwatermonitoringnet.</p>  
+			<p>Grondwatermonitoring houdt in dat de toestand van het grondwater in een bepaald gebied, of eigenlijk in een bepaald deel van de ondergrond, over langere tijd gevolgd wordt. De grootte van het gebied en de diepte van monitoring verschillen per grondwatermonitoringnet. Ook de duur van monitoring wisselt sterk.</p> 
+			<p>In het <a href="https://zoek.officielebekendmakingen.nl/stb-2017-421.html" target="_blank">Besluit basisregistratie ondergrond</a> is omschreven welke vormen van monitoring onder deze basisregistratie vallen. Het belangrijkste criterium is het type organisatie dat verantwoordelijk is voor het beheer van het grondwater: de grondwatermonitoring moet door, of in opdracht van, een bestuursorgaan, de bronhouder, worden uitgevoerd. Verder is er een beperking aan de tijdschaal gesteld. Wanneer een monitoringnet is ingesteld om de toestand van het grondwater over een langere periode van ten minste 1 jaar en met meerdere meetmomenten, dan valt het altijd onder de basisregistratie ondergrond. Aan de ruimtelijke schaal van monitoring zijn voor de basisregistratie ondergrond geen grenzen gesteld, afgezien van het feit dat voor de gehele basisregistratie ondergrond geldt dat het gegevens bevat over de ondergrond van Nederland en zijn Exclusieve Economische Zone (EEZ). De EEZ is het gebied op de Noordzee waar Nederland economische rechten heeft.</p>
+			<p>In de <a href="https://zoek.officielebekendmakingen.nl/kst-33839-3.html" target="_blank">Regels omtrent de basisregistratie ondergrond</a> en het <a href="https://zoek.officielebekendmakingen.nl/stb-2017-421.html" target="_blank">Besluit basisregistratie ondergrond</a> staat dat de BRO "voorlopig" respectievelijk "vooralsnog" geen milieukwaliteitsinformatie bevat. Voor het grondwatermonitoringdomein zijn grondwatersamenstellingsonderzoeksgegevens uit monitoringnetten rondom milieu-hygi&euml;nische projecten, waarin het met name gaat om het monitoren van de verontreiniging van de bodem en het grondwater, daarmee voorlopig buiten scope geplaatst. Op 18 december 2018 is in de Tweede kamer een motie aangenomen waarin de regering wordt verzocht "om informatie over bodemverontreiniging in de basisregistratie ondergrond op te nemen" (Kamerstuk Motie 34864-19). Momenteel is nog niet bekend wat de gevolgen van deze motie zullen zijn voor de scope van het registratieobject in de voorliggende catalogus.</p>
+			<p>De bestuursorganen die langdurig het grondwater (laten) monitoren op grondwaterkwantiteit, omdat zij daarin een wettelijke taak hebben, zijn Rijksoverheidsorganisaties (Rijkswaterstaat, Ministerie van Defensie), Provincies, Waterschappen, Gemeentes en bestuurlijke samenwerkingsverbanden. Daarnaast zijn er (semi)private organisaties die vanuit vergunningsplicht het grondwater langdurig monitoren op grondwaterkwantiteit, in opdracht van bevoegd gezag. Dit zijn bijvoorbeeld Gasunie, Prorail, drinkwaterbedrijven, grondwater onttrekkende industrie, (ondiepe) bodemenergie-exploitanten (bedrijven, ziekenhuizen, overige instellingen), natuurterreinbeheerorganisaties en exploitanten van ondiepe minerale delfstoffen. Deze organisaties doen periodiek grondwaterstandonderzoek en hebben daarvoor grondwatermonitoringnetten en meetplannen.</p>
+		</section>
+		<section id="intro-Grondwaterdomein" class='generic informative'> 
+			<h3>Domein grondwatermonitoring in de BRO</h3>
+			<p>Het domein grondwatermonitoring in de basisregistratie ondergrond (BRO) omvat de volgende vijf registratieobjecten:</p>
+			<ul>
+			  <li>Grondwatermonitoringnet;</li>
+			  <li>Grondwatermonitoringput;</li>
+			  <li>Grondwatersamenstellingsonderzoek (grondwaterkwaliteit);</li>
+			  <li>Grondwaterstandonderzoek (grondwaterkwantiteit);</li>
+			  <li>Formatieweerstandonderzoek (grondwaterkwaliteit).</li>
+			</ul>
+			<p>In de technische landelijke voorziening van de basisregistratie ondergrond worden Engelstalige benamingen gehanteerd voor de registratieobjecten. Omwille van de aansluiting hiermee worden voor de registratieobjecten Engelstalige afkortingen gebruikt. In deze catalogus worden alleen de Engelstalige afkortingen en verder de Nederlandstalige termen gebruiken.</p>
+			<ul>
+			  <li>Grondwatermonitoringnet wordt afgekort tot GMN (Groundwater Monitoring Network);</li>
+			  <li>Grondwatermonitoringput wordt afgekort tot GMW (Groundwater Monitoring Well);</li>
+			  <li>Grondwatersamenstellingsonderzoek wordt afgekort tot GAR (Groundwater Analysis Report);</li>
+			  <li>Grondwaterstandonderzoek wordt afgekort tot GLD (Groundwater Level Dossier);</li>
+			  <li>Formatieweerstandonderzoek wordt afgekort tot FRD (Formation Resistance Dossier).</li>
+			</ul>
+			<figure id='image002'>
+					<!-- link to generiek location of GitHub/BROprogramma -->
+					<img src="https://github.com/BROprogramma/generiek/raw/gh-pages/gm/media/BRO_Registratieobjecten_Entiteitenschema + FRD.png" alt="Grondwaterdomein" width="300"/>
+					<!-- Note; The URL that the above URL redirects to, i.e. 'https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/gm/media/BRO_Registratieobjecten_Entiteitenschema%20%2B%20FRD.png', doesn't seem to work -->
+					
+					<!-- (expected) link to location on docs.geostandaarden
+					<img src="https://docs.geostandaarden.nl/bro/gen/gm/media/BRO_Registratieobjecten_Entiteitenschema + FRD.png" alt="Grondwaterdomein" width="300"/>
+					-->
+					
+					<!-- original link from FRD
+						original on GitHub (https://github.com/BROprogramma/FRD/blob/master/index.html);
+							<img src="./data/Images/BRO_Registratieobjecten_Entiteitenschema + FRD.png" alt="Grondwaterdomein" width="300"/>
+						on the GitHub.io page (https://broprogramma.github.io/FRD/), this dereferences into;
+							<img src="https://broprogramma.github.io/FRD/data/Images/BRO_Registratieobjecten_Entiteitenschema + FRD.png" alt="Grondwaterdomein" width="300"/>
+					-->
+					<figcaption>De samenhang tussen de vijf registratieobjecten binnen het grondwatermonitoring domein.</figcaption>
+			</figure>
+			<p>Een grondwatermonitoringput betreft de constructie die gebruikt wordt om standen en/of de samenstelling van het grondwater te meten. Gewoonlijk bestaat een put uit een samenstel van buizen dat aan het oppervlak wordt beschermd tegen invloeden van buitenaf. Via de buizen wordt het grondwater dat zich op een bepaalde diepte bevindt ontsloten. Het deel van de buis waardoor het grondwater de buis binnen kan komen is het filter. Elke buis heeft één filter. Een filter fungeert als meetpunt in de basisregistratie ondergrond. Informatie over grondwatermonitoringput is beschreven in de <a href="https://basisregistratieondergrond.nl/inhoud-bro/registratieobjecten/grondwatermonitoring/gmw/" TARGET="_blank">Catalogus Grondwatermonitoringput</a>.</p>
+			<p>Binnen het grondwaterdomein in de basisregistratie ondergrond kent alleen de grondwatermonitoringput een fysieke locatie. De vier andere registratieobjecten zijn aan het registratieobject grondwatermonitoringput gekoppeld en hebben daarmee indirect een locatie.
+			Bij grondwaterstandonderzoeken en grondwatersamenstellingsonderzoeken ligt de verwijzing vast naar het filter in de grondwatermonitoringput waarin het onderzoek is uitgevoerd.
+			Bij formatieweerstandonderzoek ligt de verwijzing vast naar de monitoringbuis in de grondwatermonitoringput waarin het onderzoek is uitgevoerd. Daarnaast wordt hierbij gebruik gemaakt van een verwijzing naar elektrodes als onderdeel van een geo-ohmkabel die bevestigd is aan een monitoringbuis van een grondwatermonitoringput.</p>
+			<p>Bij grondwaterstandonderzoeken, grondwatersamenstellingsonderzoeken en formatieweerstandonderzoeken ligt tevens de verwijzing vast naar één of meerdere grondwatermonitoringnetten ten behoeve waarvan het onderzoek is uitgevoerd.</p>
+			<p>Een grondwatermonitoringnet is een verzameling locaties waar, voor een bepaald monitoringdoel met een bepaald wettelijk kader, periodiek onderzoek aan het grondwater op een bepaalde diepte wordt gedaan om de toestand van het grondwater te kunnen bepalen en de eventuele veranderingen erin te kunnen volgen. Het grondwatermonitoringnet weerspiegelt de groepering van onderzoeksgegevens door de bronhouder op basis van het doel van de monitoring. Het registratieobject vergroot daarmee de hergebruikswaarde voor afnemers van de gegevens van de basisregistratie ondergrond. Informatie over grondwatermonitoringnet is beschreven in de <a href="https://basisregistratieondergrond.nl/inhoud-bro/registratieobjecten/grondwatermonitoring/gmn/" TARGET="_blank">Catalogus Grondwatermonitoringnet</a>.</P>
+			<p>Een grondwatermonitoringnet valt onder de verantwoordelijkheid van één bronhouder en heeft een vastgesteld monitoringdoel. In de praktijk kan het voorkomen dat een grondwaterstandonderzoek, grondwatersamenstellingsonderzoek, en/of formatieweerstandonderzoek ten behoeve van meer dan één doel wordt uitgevoerd. Omdat er voor afzonderlijke monitoringdoelen verschillende grondwatermonitoringnetten zijn, betekent dit voor de basisregistratie ondergrond dat formatieweerstandonderzoeken kunnen toebehoren aan één of meerdere grondwatermonitoringnetten.</p>
+		</section>
 		
 		<!-- sectie De Grondwatermonitoringput en sectie Belangrijkste entiteiten -->
 		<section data-include='./data/GMW_en_belangrijkste_entiteiten.html'></section>
