Debugging to see why Linter (no-headingless-sections) occurs. Temporarily only include grondwatermonitoring section

--- a/index.html
+++ b/index.html
@@ -107,16 +107,16 @@
 		</section>
 		
 		<!-- sectie De Grondwatermonitoringput en sectie Belangrijkste entiteiten -->
-		<section data-include='./data/GMW_en_belangrijkste_entiteiten.html'></section>
+		<!-- <section data-include='./data/GMW_en_belangrijkste_entiteiten.html'></section> -->
 		<!-- Note, I suppose a relative path can be used, since this is also done for FRD. Specifically;
 		this relative path is used on FRD GitHub.io doc page; "./data/FRD-cat.respec.html", which redirects to; 'https://broprogramma.github.io/FRD/data/FRD-cat.respec.html' -->
 		
 		<!-- sectie samenhang en consistentie registratieobjecten in grondwatermonitoringdomein -->
-		<section data-include='https://github.com/BROprogramma/generiek/raw/gh-pages/gm/data/Samenhang_RO_GM_domein.html'></section>
+		<!-- <section data-include='https://github.com/BROprogramma/generiek/raw/gh-pages/gm/data/Samenhang_RO_GM_domein.html'></section> -->
 		<!-- (expected) link to location on docs.geostandaarden; 'https://docs.geostandaarden.nl/bro/gen/gm/data/Samenhang_RO_GM_domein.html'. -->
 		
 		<!-- sectie INSPIRE-thema Geology -->
-		<section data-include='https://github.com/BROprogramma/generiek/raw/gh-pages/gm/data/INSPIRE_Geology.html'></section>
+		<!-- <section data-include='https://github.com/BROprogramma/generiek/raw/gh-pages/gm/data/INSPIRE_Geology.html'></section> -->
 		<!-- (expected) link to location on docs.geostandaarden; 'https://docs.geostandaarden.nl/bro/gen/gm/data/INSPIRE_Geology.html'. -->
 	</section>
 	
