--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 		</section>
 		
 		<!-- sectie De Grondwatermonitoringput en sectie Belangrijkste entiteiten -->
-		<!-- <section data-include='./data/GMW_en_belangrijkste_entiteiten.html'></section> -->
+		<section data-include='./data/GMW_en_belangrijkste_entiteiten.html'></section>
 		<!-- Note, I suppose a relative path can be used, since this is also done for FRD. Specifically;
 		this relative path is used on FRD GitHub.io doc page; "./data/FRD-cat.respec.html", which redirects to; 'https://broprogramma.github.io/FRD/data/FRD-cat.respec.html' -->
 		
