Added dummy h2 to 'De grondwatermonitoringput' section

--- a/data/GMW_en_belangrijkste_entiteiten.html
+++ b/data/GMW_en_belangrijkste_entiteiten.html
@@ -1,6 +1,7 @@
 <html>
 	<body>
 		<section id="GMW">
+			<h2>Dummy H2 section</h2>
 			<h3>De Grondwatermonitoringput</h3>
 
 			<section id="GMW inleiding">
