--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 		</section>
 		
 		<!-- sectie De Grondwatermonitoringput en sectie Belangrijkste entiteiten -->
-		<section id='GMW_en_belangrijkste_entiteiten' data-include='./data/GMW_en_belangrijkste_entiteiten.html'></section>
+		<div id='GMW_en_belangrijkste_entiteiten' data-include='./data/GMW_en_belangrijkste_entiteiten.html'></div>
 		<!-- <section id='Grondwatermonitoringput_toelichting' data-include='https://raw.githubusercontent.com/BROprogramma/GMW/gh-pages/toelichting.html'> -->
 		<!-- Note, I suppose a relative path can be used, since this is also done for FRD. Specifically;
 		this relative path is used on FRD GitHub.io doc page; "./data/FRD-cat.respec.html", which redirects to; 'https://broprogramma.github.io/FRD/data/FRD-cat.respec.html' -->
