Added id to section samenhang en consistentie registratieobjecten in grondwatermonitoringdomein

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 		this relative path is used on FRD GitHub.io doc page; "./data/FRD-cat.respec.html", which redirects to; 'https://broprogramma.github.io/FRD/data/FRD-cat.respec.html' -->
 		
 		<!-- sectie samenhang en consistentie registratieobjecten in grondwatermonitoringdomein -->
-		<section data-include='https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/gm/data/Samenhang_RO_GM_domein.html'></section>
+		<section id="samenhang ROs in grondwater" data-include='https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/gm/data/Samenhang_RO_GM_domein.html'></section>
 		<!-- (expected) link to location on docs.geostandaarden; 'https://docs.geostandaarden.nl/bro/gen/gm/data/Samenhang_RO_GM_domein.html'. -->
 		
 		<!-- sectie INSPIRE-thema Geology -->
