--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 	<!-- hoofdstuk 2 -->
 	<section id='algemene-kenmerken-en-begrippen' data-include='https://docs.geostandaarden.nl/bro/gen/algemene-kenmerken-en-begrippen.html' class='generic informative'></section>
 	
-	<!-- hoofdstuk 3 -->
-	<section id="Grondwatermonitoringput">
-		<h2>Grondwatermonitoringput</h2>
+	<!-- hoofdstuk 3 Grondwatermonitoringput - algemene inleiding -->
+	<section id="Grondwatermonitoringput algemene inleiding">
+		<h2>Grondwatermonitoringput - algemene inleiding</h2>
 		<!-- 3.1 Grondwatermonitoring -->
 		<section id="grondwatermonitoring" class='generic informative' data-include='https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/gm/data/Grondwatermonitoring.html'></section>
 		<!-- (expected) link to location on docs.geostandaarden; 'https://docs.geostandaarden.nl/bro/gen/gm/data/Domein grondwatermonitoring in de BRO.html'. -->
@@ -57,19 +57,23 @@
 		<section id="intro-Grondwaterdomein" class='generic informative' data-include='https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/gm/data/Domein grondwatermonitoring in de BRO.html'></section>
 		<!-- (expected) link to location on docs.geostandaarden; 'https://docs.geostandaarden.nl/bro/gen/gm/data/Domein grondwatermonitoring in de BRO.html'. -->
 		
-		<!-- 3.3 De Grondwatermonitoringput -->
-		<section id='De Grondwatermonitoringput' data-include='./data/De Grondwatermonitoringput.html'></section>
+		<!-- 3.3 Samenhang en consistentie tussen verschillende registratieobjecten in het Grondwaterdomein -->
+		<section id="samenhang ROs in grondwater" class='generic informative' data-include='https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/gm/data/Samenhang_RO_GM_domein.html'></section>
+		<!-- (expected) link to location on docs.geostandaarden; 'https://docs.geostandaarden.nl/bro/gen/gm/data/Samenhang_RO_GM_domein.html'. -->
+	</section>
+	
+	<!-- hoofdstuk 4 Grondwatermonitoringput (normatieve/juridische deel) -->
+	<section id='Grondwatermonitoringput'>
+		<h2>Grondwatermonitoringput</h2>
+		<!-- 4.1 Inleiding -->
+		<section id='GMW inleiding' data-include='./data/GMW normatief, inleiding.html'></section>
 		<!-- Note, I suppose a relative path can be used, since this is also done for FRD. Specifically;
 		this relative path is used on FRD GitHub.io doc page; "./data/FRD-cat.respec.html", which redirects to; 'https://broprogramma.github.io/FRD/data/FRD-cat.respec.html' -->
 		
-		<!-- 3.4 Belangrijkste entiteiten -->
+		<!-- 4.2 Belangrijkste entiteiten -->
 		<section id='Belangrijkste entiteiten' data-include='./data/Belangrijkste entiteiten.html'></section>
 		
-		<!-- 3.5 Samenhang en consistentie tussen verschillende registratieobjecten in het Grondwaterdomein -->
-		<section id="samenhang ROs in grondwater" class='generic informative' data-include='https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/gm/data/Samenhang_RO_GM_domein.html'></section>
-		<!-- (expected) link to location on docs.geostandaarden; 'https://docs.geostandaarden.nl/bro/gen/gm/data/Samenhang_RO_GM_domein.html'. -->
-		
-		<!-- 3.6 INSPIRE (INSPIRE-thema Geology) -->
+		<!-- 4.3 INSPIRE (INSPIRE-thema Geology) -->
 		<section id="INSPIRE" data-include='https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/gm/data/INSPIRE_Geology.html'></section>
 		<!-- (expected) link to location on docs.geostandaarden; 'https://docs.geostandaarden.nl/bro/gen/gm/data/INSPIRE_Geology.html'. -->
 	</section>
