--- a/index.html
+++ b/index.html
@@ -83,10 +83,7 @@
 	<section id="intro-gegevensdefinitie" class='generic informative'>
 		<h2>Opbouw van de gegevensdefinitie</h2>
 		<section id="intro-cat-inleiding" data-include="https://docs.geostandaarden.nl/bro/gen/intro-cat-inleiding.html"></section>
-		<section id="domeinen">
-			<h3>Domeinen</h3>
-			<div id="domeinen" data-include="https://docs.geostandaarden.nl/bro/gen/domeinen-intro.html"></div>
-			<section id="domeinen" data-include="https://docs.geostandaarden.nl/bro/gen/domeinen-intro.html"></section>
+		<section id="domeinen" data-include="https://docs.geostandaarden.nl/bro/gen/domeinen-intro.html">
 			<section id="aantal" data-include="https://docs.geostandaarden.nl/bro/gen/aantal.html"></section>
 			<section id="code" data-include="https://docs.geostandaarden.nl/bro/gen/code.html"></section>
 			<section id="gemeten waarden">
