Fix to correctly restore duplicate domeinen

--- a/index.html
+++ b/index.html
@@ -83,7 +83,10 @@
 	<section id="intro-gegevensdefinitie" class='generic informative'>
 		<h2>Opbouw van de gegevensdefinitie</h2>
 		<section id="intro-cat-inleiding" data-include="https://docs.geostandaarden.nl/bro/gen/intro-cat-inleiding.html"></section>
-		<section id="domeinen" data-include="https://docs.geostandaarden.nl/bro/gen/domeinen-intro.html"></section>
+		<section id="domeinen">
+			<h3>Domeinen</h3>
+			<!-- should heading/chaptername be removed from domeinen-intro.html? -->
+			<div id="domeinen-intro" data-include="https://docs.geostandaarden.nl/bro/gen/domeinen-intro.html"></div>
 			<section id="aantal" data-include="https://docs.geostandaarden.nl/bro/gen/aantal.html"></section>
 			<section id="code" data-include="https://docs.geostandaarden.nl/bro/gen/code.html"></section>
 			<section id="gemeten waarden">
@@ -103,6 +106,7 @@
 			</section>
 			<section id="coordinatenpaar" data-include="https://docs.geostandaarden.nl/bro/gen/coordinatenpaar.html"></section>
 			<section id="organisatie" data-include="https://docs.geostandaarden.nl/bro/gen/organisatie.html"></section>
+		</section>
 		<section id="domeinmodel" data-include="https://docs.geostandaarden.nl/bro/gen/domeinmodel-gen.html"></section>
 		<section id="verplichte-gegevens-waarden" data-include="https://docs.geostandaarden.nl/bro/gen/verplichte-gegevens-waarden.html"></section>
 	</section>
