--- a/index.html
+++ b/index.html
@@ -44,17 +44,17 @@
 	<section id='algemene-kenmerken-en-begrippen' data-include='https://docs.geostandaarden.nl/bro/gen/algemene-kenmerken-en-begrippen.html' class='generic informative'></section>
 	
 	<!-- hoofdstuk 3 Grondwatermonitoringput - algemene inleiding -->
-	<section id="Grondwatermonitoringput algemene inleiding">
+	<section id="Grondwatermonitoringput algemene inleiding" class='generic informative'>
 		<h2>Grondwatermonitoringput - algemene inleiding</h2>
 		<!-- 3.1 Grondwatermonitoring -->
-		<section id="grondwatermonitoring" class='generic informative' data-include='https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/gm/data/Grondwatermonitoring.html'></section>
+		<section id="grondwatermonitoring" data-include='https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/gm/data/Grondwatermonitoring.html'></section>
 		<!-- (expected) link to location on docs.geostandaarden; 'https://docs.geostandaarden.nl/bro/gen/gm/data/Domein grondwatermonitoring in de BRO.html'. -->
 		<!-- Note; Instead of the 'main URL' (https://github.com/BROprogramma/generiek/raw/gh-pages/gm/data/Grondwatermonitoring.html), the above 'redirect URL' is used (the main URL seems to redirect to this alternative 'https://raw.githubusercontent.com/...' URL).
 		Initially used the 'main URL' because for a PNG image within this data-include page, the 'redirect URL' didn't seem to work.
 		However, for this html document it seems that only the 'redirect URL' works and not the 'main URL'. Weird... -->
 		
 		<!-- 3.2 Domein grondwatermonitoring in de BRO -->
-		<section id="intro-Grondwaterdomein" class='generic informative' data-include='https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/gm/data/Domein grondwatermonitoring in de BRO.html'></section>
+		<section id="intro-Grondwaterdomein" data-include='https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/gm/data/Domein grondwatermonitoring in de BRO.html'></section>
 		<!-- (expected) link to location on docs.geostandaarden; 'https://docs.geostandaarden.nl/bro/gen/gm/data/Domein grondwatermonitoring in de BRO.html'. -->
 		
 		<!-- 3.3 Samenhang en consistentie tussen verschillende registratieobjecten in het Grondwaterdomein -->
