--- a/data/GMW-cat.msword.html
+++ b/data/GMW-cat.msword.html
@@ -15,7 +15,7 @@
    <body>
       <p>Conceptual model/GMW conceptueel MIM/20190910</p>
       <p>Imvertor: 1.66.0</p>
-      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20220628-140257</p>
+      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20220728-160632</p>
       <hr>
       <section>
          <h1>Artikel 1 Definitie van registratieobject, entiteiten en attributen</h1>
@@ -1186,7 +1186,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d59848e5095"></a><section id="detail_d59848e5095">
+                     </section><a class="anchor" id="detail_d59866e5095"></a><section id="detail_d59866e5095">
                      <h4>  aangeleverde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1224,7 +1224,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d59848e5261"></a><section id="detail_d59848e5261">
+                  </section><a class="anchor" id="detail_d59866e5262"></a><section id="detail_d59866e5262">
                      <h4>  aangeleverde verticale positie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1261,7 +1261,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d59848e5427"></a><section id="detail_d59848e5427">
+                  </section><a class="anchor" id="detail_d59866e5429"></a><section id="detail_d59866e5429">
                      <h4>  gestandaardiseerde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1299,7 +1299,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d59848e5593"></a><section id="detail_d59848e5593">
+                  </section><a class="anchor" id="detail_d59866e5596"></a><section id="detail_d59866e5596">
                      <h4>  registratiegeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1336,7 +1336,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d59848e5759"></a><section id="detail_d59848e5759">
+                  </section><a class="anchor" id="detail_d59866e5763"></a><section id="detail_d59866e5763">
                      <h4>  putgeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -2209,7 +2209,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d59848e10803"></a><section id="detail_d59848e10803">
+                     </section><a class="anchor" id="detail_d59866e10810"></a><section id="detail_d59866e10810">
                      <h4>  tussentijdse gebeurtenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -7171,9 +7171,9 @@
                      <td>✔</td>
                      <td>
                         
-                        <p>De maaiveldpositie bij de put is tijdens een meetronde opnieuw ingemeten en is daarom
+                        <p>De maaiveldpositie bij de put is tijdens een meetronde opnieuw gemeten en is daarom
                            opnieuw vastgesteld. De posities van de put zelf zijn ongewijzigd omdat deze niet
-                           opnieuw zijn ingemeten.</p>
+                           opnieuw zijn gemeten.</p>
                         </td>
                   </tr>
                   <tr>
@@ -7182,8 +7182,8 @@
                      <td>✔</td>
                      <td>
                         
-                        <p>De posities van het maaiveld en van de bovenkant van de buizen zijn tijdens een meetronde
-                           opnieuw ingemeten en zijn daarom opnieuw vastgesteld.</p>
+                        <p>De posities van de bovenkant van de buizen en optioneel de positie van het maaiveld
+                           zijn tijdens een meetronde opnieuw gemeten en zijn daarom opnieuw vastgesteld.</p>
                         </td>
                   </tr>
                   <tr>
