--- a/data/GMW-cat.respec.html
+++ b/data/GMW-cat.respec.html
@@ -1162,7 +1162,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d59848e5095"></a><section id="detail_d59848e5095">
+            </section><a class="anchor" id="detail_d59866e5095"></a><section id="detail_d59866e5095">
             <h4>  aangeleverde locatie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1200,7 +1200,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d59848e5261"></a><section id="detail_d59848e5261">
+         </section><a class="anchor" id="detail_d59866e5262"></a><section id="detail_d59866e5262">
             <h4>  aangeleverde verticale positie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1237,7 +1237,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d59848e5427"></a><section id="detail_d59848e5427">
+         </section><a class="anchor" id="detail_d59866e5429"></a><section id="detail_d59866e5429">
             <h4>  gestandaardiseerde locatie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1275,7 +1275,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d59848e5593"></a><section id="detail_d59848e5593">
+         </section><a class="anchor" id="detail_d59866e5596"></a><section id="detail_d59866e5596">
             <h4>  registratiegeschiedenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1312,7 +1312,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d59848e5759"></a><section id="detail_d59848e5759">
+         </section><a class="anchor" id="detail_d59866e5763"></a><section id="detail_d59866e5763">
             <h4>  putgeschiedenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -2185,7 +2185,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d59848e10803"></a><section id="detail_d59848e10803">
+            </section><a class="anchor" id="detail_d59866e10810"></a><section id="detail_d59866e10810">
             <h4>  tussentijdse gebeurtenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -7145,9 +7145,9 @@
                <td>✔</td>
                <td>
                   
-                  <p>De maaiveldpositie bij de put is tijdens een meetronde opnieuw ingemeten en is daarom
+                  <p>De maaiveldpositie bij de put is tijdens een meetronde opnieuw gemeten en is daarom
                      opnieuw vastgesteld. De posities van de put zelf zijn ongewijzigd omdat deze niet
-                     opnieuw zijn ingemeten.</p>
+                     opnieuw zijn gemeten.</p>
                   </td>
             </tr>
             <tr>
@@ -7156,8 +7156,8 @@
                <td>✔</td>
                <td>
                   
-                  <p>De posities van het maaiveld en van de bovenkant van de buizen zijn tijdens een meetronde
-                     opnieuw ingemeten en zijn daarom opnieuw vastgesteld.</p>
+                  <p>De posities van de bovenkant van de buizen en optioneel de positie van het maaiveld
+                     zijn tijdens een meetronde opnieuw gemeten en zijn daarom opnieuw vastgesteld.</p>
                   </td>
             </tr>
             <tr>
