--- a/data/Belangrijkste entiteiten.html
+++ b/data/Belangrijkste entiteiten.html
@@ -80,19 +80,14 @@
 						<figcaption>Het maaiveld in het gebied daalt en de positie van de put t.o.v. NAP daalt mee. Het attribuut 'maaiveld stabiel' heeft als waarde 'nee', het attribuut 'putstabiliteit' heeft de waarde 'instabiel'.</figcaption>
 					</figure>
 				</li>
-				<li>Een bronhouder doet met regelmaat meetrondes. De bronhouder wil alle gegevens uit een meetronde aanleveren aan de BRO. Wanneer gegevens uit een meetronde niet passen onder de overige gebeurtenissen dan blijft deze gebeurtenis over als 'rest optie' wanneer alleen de maaiveldpositie opnieuw is gemeten. De verwachting is dat voornamelijk de volgende twee gevallen hieronder vallen:
-					<ol>
-						<li>De bronhouder wil altijd de laatste meetwaarde van de maaiveldpositie in de BRO hebben zelfs als deze gelijk is aan de vorige waarde.</li>
-						<li>Een meetwaarde van de maaiveldpositie binnen de meetfout valt ten opzichte van de vorige aangeleverde waarde. Maar de bronhouder wil nog steeds de laatste waarde aanleveren.</li>
-					</ol>				
-				Deze gebeurtenis is alleen te gebruiken wanneer gegevens uit een meetronde niet onder de bestaande gebeurtenis nieuwe bepaling maaiveld zijn aan te leveren.
+			</ol>
+			
+			<p>In de huidige praktijk laten meetnetbeheerders (bronhouders) vaak met zekere regelmaat nameetrondes uitvoeren bij hun monitoringputten. Met zo’n nameetronde willen ze de actuele (meest recent gemeten) maaiveldpositie en/of de positie van de bovenkant van de monitoringbuis vastleggen, ongeacht het feit of überhaupt sprake is van een positieverandering t.o.v. de vorige in- of nameting en ongeacht wat de oorzaak is van die positieverandering (natuurlijke processen, direct ingrijpen door de mens, meetonnauwkeurigheid). Wanneer resultaten uit deze nameetrondes niet passen onder de hierboven beschreven gebeurtenissen blijven onderstaande twee gebeurtenissen als mogelijkheid over.</p>
+			
+			<ol start="12">
+				<li>In de nameetronde is alleen de maaiveldpositie van de put opnieuw gemeten. Deze wordt geregistreerd, ongeacht het feit of er sprake is van een positieverandering.
 				</li>
-				<li>Een bronhouder doet met regelmaat meetrondes. De bronhouder wil alle gegevens uit een meetronde aanleveren aan de BRO. Wanneer gegevens uit een meetronde niet passen onder de overige gebeurtenissen dan blijft deze gebeurtenis over als "rest optie" wanneer de hoogte bovenkantbuis opnieuw is gemeten en optioneel ook de maaiveldpositie. De verwachting is dat voornamelijk de volgende twee gevallen hieronder vallen:
-					<ol>
-						<li>De bronhouder wil altijd de laatste meetwaarde in de BRO hebben zelfs als deze gelijk is aan de vorige waarde.</li>
-						<li>Een meetwaarde valt binnen de meetfout valt opzichte van de vorige aangeleverde waarde. Maar de bronhouder wil nog steeds de laatste waarde aanleveren.</li>
-					</ol>
-				Daarmee is deze gebeurtenis alleen een alternatief wanneer gegevens uit een meetronde niet met de bestaande gebeurtenis nieuwe bepaling posities kan worden aangeleverd.					
+				<li>In de nameetronde is de positie bovenkant buis en optioneel ook de maaiveldpositie van de put opnieuw gemeten. Deze word(t)(en) geregistreerd, ongeacht het feit of er sprake is van een positieverandering.
 				</li>
 			</ol>
 		</section>
