--- a/data/Belangrijkste entiteiten.html
+++ b/data/Belangrijkste entiteiten.html
@@ -82,12 +82,12 @@
 				</li>
 			</ol>
 			
-			<p>In de huidige praktijk laten meetnetbeheerders (bronhouders) vaak met zekere regelmaat nameetrondes uitvoeren bij hun monitoringputten. Met zo’n nameetronde willen ze de actuele (meest recent gemeten) maaiveldpositie en/of de positie van de bovenkant van de monitoringbuis vastleggen, ongeacht het feit of überhaupt sprake is van een positieverandering t.o.v. de vorige in- of nameting en ongeacht wat de oorzaak is van die positieverandering (natuurlijke processen, direct ingrijpen door de mens, meetonnauwkeurigheid). Wanneer resultaten uit deze nameetrondes niet passen onder de hierboven beschreven gebeurtenissen blijven onderstaande twee gebeurtenissen als mogelijkheid over.</p>
+			<p>In de huidige praktijk laten meetnetbeheerders (bronhouders) vaak met zekere regelmaat (na)meetrondes uitvoeren bij hun monitoringputten. Met zo’n (na)meetronde willen ze de actuele (meest recent gemeten) maaiveldpositie en/of de positie van de bovenkant van de monitoringbuis vastleggen, ongeacht het feit of überhaupt sprake is van een positieverandering t.o.v. de vorige in- of nameting en ongeacht wat de oorzaak is van die positieverandering (natuurlijke processen, direct ingrijpen door de mens, meetonnauwkeurigheid). Wanneer resultaten uit deze (na)meetrondes niet passen onder de hierboven beschreven gebeurtenissen blijven onderstaande twee gebeurtenissen als mogelijkheid over.</p>
 			
 			<ol start="12">
-				<li>In de nameetronde is alleen de maaiveldpositie van de put opnieuw gemeten. Deze wordt geregistreerd, ongeacht het feit of er sprake is van een positieverandering.
+				<li>In de (na)meetronde is alleen de maaiveldpositie van de put opnieuw gemeten. Deze wordt geregistreerd, ongeacht het feit of er sprake is van een positieverandering.
 				</li>
-				<li>In de nameetronde is de positie bovenkant buis en optioneel ook de maaiveldpositie van de put opnieuw gemeten. Deze word(t)(en) geregistreerd, ongeacht het feit of er sprake is van een positieverandering.
+				<li>In de (na)meetronde is de positie bovenkant buis en optioneel ook de maaiveldpositie van de put opnieuw gemeten. Deze word(t)(en) geregistreerd, ongeacht het feit of er sprake is van een positieverandering.
 				</li>
 			</ol>
 		</section>
